# unifi-door-watcher

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: config.example.toml  env.example  unifi-door-watcher.service
scripts/: bootstrap_doors.py  bootstrap_protect_alarms.py
src/unifi_door_watcher/: __main__.py  app.py  clock.py  config.py  models.py  state.py
src/unifi_door_watcher/access/: client.py  seed.py  stream.py
src/unifi_door_watcher/detect/: pipeline.py
src/unifi_door_watcher/notify/: dedupe.py  protect.py
src/unifi_door_watcher/routes/: health.py
tests/: conftest.py  test_actor_enrichment.py  test_bootstrap_protect_alarms.py  test_config.py  test_held_open.py  test_protect_notify.py  test_seed.py  test_stream_dispatch.py  test_unauthorized.py
