[project]
name = "unifi-door-watcher"
version = "0.1.0"
description = "Watches UniFi Access door events and raises alerts to UniFi Protect Alarm Manager."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.8",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
unifi-door-watcher = "unifi_door_watcher.__main__:main"
bootstrap-doors = "unifi_door_watcher.scripts.bootstrap_doors:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_door_watcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
# `ruff check` for lint, `ruff format` for whitespace/wrapping. Both run in
# CI via `make all`. The formatter is Black-compatible and preserves single
# blank lines inside function bodies, so the project's "let the code
# breathe" style is unaffected.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (likely-buggy patterns)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (idiomatic modern Python)
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length is enforced softly; long URLs/strings are fine
    "B008",  # cheap to exempt; we don't use mutable defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is fine in tests
"scripts/*" = ["E402"]  # sys.path tweak before imports

[tool.ruff.lint.isort]
known-first-party = ["unifi_door_watcher"]
